--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -34,9 +34,15 @@
        <property name="defaultDropAction">
         <enum>Qt::MoveAction</enum>
        </property>
+       <property name="rootIsDecorated">
+        <bool>false</bool>
+       </property>
        <property name="itemsExpandable">
         <bool>false</bool>
        </property>
+       <attribute name="headerVisible">
+        <bool>false</bool>
+       </attribute>
        <column>
         <property name="text">
          <string notr="true">Feeds</string>
