Failed attempt to trap mouse movement.

--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -235,7 +235,11 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
             </property>
            </column>
           </widget>
-          <widget class="QTextBrowser" name="rssContentView"/>
+          <widget class="QTextBrowser" name="rssContentView">
+           <property name="openLinks">
+            <bool>false</bool>
+           </property>
+          </widget>
          </widget>
         </item>
        </layout>
