--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -180,7 +180,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
-          <widget class="QTreeWidget" name="titleTree">
+          <widget class="QTreeView" name="titleTree">
            <property name="contextMenuPolicy">
             <enum>Qt::CustomContextMenu</enum>
            </property>
@@ -199,41 +199,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
            <property name="animated">
             <bool>true</bool>
            </property>
-           <attribute name="headerMinimumSectionSize">
-            <number>15</number>
-           </attribute>
-           <attribute name="headerShowSortIndicator" stdset="0">
+           <attribute name="headerStretchLastSection">
             <bool>true</bool>
            </attribute>
-           <column>
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="PyRssReader.qrc">
-              <normaloff>:/RssReader/Resources/Paper Clip.png</normaloff>:/RssReader/Resources/Paper Clip.png</iconset>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Title</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Date</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Creator</string>
-            </property>
-           </column>
-           <column>
-            <property name="text">
-             <string>Categories</string>
-            </property>
-           </column>
           </widget>
           <widget class="QTextBrowser" name="rssContentView">
            <property name="openLinks">
