--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>:/RssReader/RssReader.ico</normaloff>:/RssReader/RssReader.ico</iconset>
+    <normaloff>Resources/RssReader.ico</normaloff>Resources/RssReader.ico</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
