--- a/PrefsDlg.ui
+++ b/PrefsDlg.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Preferences</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>Resources/RssReader.ico</normaloff>Resources/RssReader.ico</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>3</number>
