--- a/PrefsDlg.ui
+++ b/PrefsDlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>395</width>
-    <height>490</height>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -304,29 +304,39 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="proxyHostnameLineEdit"/>
      </item>
-     <item row="2" column="0">
+     <item row="3" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Proxy port</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
+     <item row="3" column="1">
       <widget class="QSpinBox" name="proxyPortSpinBox">
        <property name="maximum">
         <number>99999</number>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="4" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Proxy user ID</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
+     <item row="4" column="1">
       <widget class="QLineEdit" name="proxyUserIdLineEdit"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="text">
+        <string>Proxy password</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="proxyPasswordLineEdit"/>
      </item>
     </layout>
    </item>
