Fix several type issues.  Add some protection when fetching resources.  Limit size of favicons and feed images, and scale them appropriately in the feed title bar.

--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -132,6 +132,12 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
                  <height>32</height>
                 </size>
                </property>
+               <property name="maximumSize">
+                <size>
+                 <width>32</width>
+                 <height>32</height>
+                </size>
+               </property>
                <property name="text">
                 <string/>
                </property>
@@ -142,7 +148,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
                 <bool>false</bool>
                </property>
                <property name="alignment">
-                <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+                <set>Qt::AlignmentFlag::AlignCenter</set>
                </property>
               </widget>
              </item>
