Ensure that files are loaded from resources, not from the external file system, as that won't work when running from within a bundle created by PyInstaller.

--- a/PyRssReader.qrc
+++ b/PyRssReader.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/RssReader">
+    <file>Resources/completeHtmlDocument.html</file>
     <file>Resources/RssReader.ico</file>
     <file>Resources/edit.png</file>
     <file>Resources/minus.png</file>
