--- a/PurgeDlg.ui
+++ b/PurgeDlg.ui
@@ -14,8 +14,8 @@
    <string>Purge Feed</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>Resources/RssReader.ico</normaloff>Resources/RssReader.ico</iconset>
+   <iconset resource="PyRssReader.qrc">
+    <normaloff>:/RssReader/Resources/RssReader.ico</normaloff>:/RssReader/Resources/RssReader.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -50,7 +50,7 @@
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Orientation::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
@@ -82,7 +82,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -95,16 +95,18 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="PyRssReader.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
