--- a/PyRssReader.qrc
+++ b/PyRssReader.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/RssReader">
+    <file>Resources/pocket.png</file>
     <file>Resources/completeHtmlDocument.html</file>
     <file>Resources/RssReader.ico</file>
     <file>Resources/edit.png</file>
