--- a/filter_dialog.ui
+++ b/filter_dialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Create Filter</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="PyRssReader.qrc">
+    <normaloff>:/RssReader/Resources/RssReader.ico</normaloff>:/RssReader/Resources/RssReader.ico</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="label">
@@ -105,7 +109,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -118,10 +122,10 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Orientation::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
      </property>
     </widget>
    </item>
@@ -134,7 +138,9 @@
   <tabstop>actionCombo</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="PyRssReader.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
