Replace saving articles to Pocket with saving articles to Instapaper.

--- a/PyRssReaderWindow.ui
+++ b/PyRssReaderWindow.ui
@@ -269,7 +269,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
    <addaction name="actionCreate_Global_Filter"/>
    <addaction name="actionEdit_Language_Filter"/>
    <addaction name="actionEdit_Ad_Filter"/>
-   <addaction name="actionAdd_to_Pocket"/>
+   <addaction name="actionAdd_to_Instapaper"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionExit">
@@ -356,16 +356,16 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     <string>Import OPML...</string>
    </property>
   </action>
-  <action name="actionAdd_to_Pocket">
+  <action name="actionAdd_to_Instapaper">
    <property name="icon">
     <iconset resource="PyRssReader.qrc">
-     <normaloff>:/RssReader/Resources/pocket.png</normaloff>:/RssReader/Resources/pocket.png</iconset>
+     <normaloff>:/RssReader/Resources/instapaper.png</normaloff>:/RssReader/Resources/instapaper.png</iconset>
    </property>
    <property name="text">
-    <string>Add to Pocket</string>
+    <string>Add to Instapaper</string>
    </property>
-   <property name="toolTip">
-    <string>Adds the current article to Pocket</string>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::NoRole</enum>
    </property>
   </action>
  </widget>
